tests/golden/cluster-network-policies/protected.yaml
---
# Source: cluster-network-policies/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kept
  namespace: edge
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
    argocd.argoproj.io/sync-wave: "5"
    helm.sh/resource-policy: keep
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector: {}

---
# Source: cluster-network-policies/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: not-kept
  namespace: edge
spec:
  podSelector:
    matchExpressions:
    - key: tier
      operator: In
      values:
      - web
      - api
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector: {}
